[tool.poetry]
name = "goit-web-hw-02"
version = "0.1.0"
description = "Personal assistant"
authors = ["Shpetynya <olga.shpetnaja@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8"
aiosqlite = "^0.20.0"
click = "^8.1.3"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
